# mmaps-monorepo

embedder/: .gitignore  pyproject.toml
embedder/efficient_net/: export_onnx.py  model.py  test_inference.py
embedder/efficient_net/triton/: run_triton.sh
embedder/efficient_net/triton/model_repository/efficientnet/: config.pbtxt
image-search-api/: main.py  pyproject.toml
image-search-api/app/: config.py  setup.py
image-search-api/app/clients/: triton_embedder.py
image-search-api/app/di/: container.py
image-search-api/app/image_search/: __init__.py  router.py  schemas.py
image-search-api/app/repositories/: opensearch_repository.py
image-search-api/app/services/: image_search_service.py  preprocessing.py
image-search-api/app/utils/: vectors.py
image-search-api/config/: config.yml
image-search-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
image-search-ui/src/: App.svelte
image-search-ui/src/services/: imageSearch.js
indexer/: .gitignore  build_manual.py  image_embeddings.parquet  pyproject.toml  test.py
ops/: .gitignore  docker-compose.minio.yml  docker-compose.opensearch.yml  opensearch.yml
ops/minio-data/.minio.sys/: format.json
