[project]
name = "embedder"
version = "0.1.0"
description = ""
authors = [
    {name = "Berdyshev Kirill Dmitrievich",email = "kdberdyshev@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.10"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "numpy (==1.22.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
