[project]
name = "embedder"
version = "0.1.0"
description = ""
authors = [
    {name = "Berdyshev Kirill Dmitrievich",email = "kdberdyshev@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.*"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=1.24.4)",
    "onnx (>=1.19.1,<2.0.0)",
    "onnxscript (>=0.5.6,<0.6.0)",
    "torchvision (>=0.23.0,<0.24.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
