[project]
name = "image-search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.126.0,<0.127.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "boto3 (>=1.42.14,<2.0.0)",
    "dependency-injector (>=4.48.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
