[project]
name = "indexer"
version = "0.1.0"
description = ""
authors = [
    {name = "Berdyshev Kirill Dmitrievich",email = "kdberdyshev@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.10"
dependencies = [

    "boto3 (>=1.42.14,<2.0.0)",
    "numpy (==1.22.1)",
    "torch (>=2.9.1,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "fiftyone (>=1.11.0,<2.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "polars (>=1.36.1,<2.0.0)",
    "opensearch-py (>=3.1.0,<4.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
